src/parsers/dasmaQlSuggestionParser.js
// Generated by Peggy 3.0.2.
//
// https://peggyjs.org/

"use strict";


    function flattenExpressions(expressions) {
        let flatList = [];
        for (const expr of expressions) {
            if (Array.isArray(expr)) {
                flatList.push(...flattenExpressions(expr)); // Rekursivt flade dybere arrays ud
            } else if (expr && typeof expr === 'object') {
                flatList.push(expr); // Tilføj ikke-null udtryk direkte til listen
            }
        }
        return flatList.filter(e => e !== null && e !== undefined); // Fjern null/undefined værdier
    }

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "o";
  var peg$c1 = "r";
  var peg$c2 = "d";
  var peg$c3 = "e";
  var peg$c4 = "b";
  var peg$c5 = "y";
  var peg$c6 = ",";
  var peg$c7 = "s";
  var peg$c8 = "c";
  var peg$c9 = "a";
  var peg$c10 = "n";
  var peg$c11 = "t";
  var peg$c12 = "w";
  var peg$c13 = "l";
  var peg$c14 = "i";
  var peg$c15 = "k";
  var peg$c16 = "not";
  var peg$c17 = "!";
  var peg$c18 = "=";
  var peg$c19 = ">";
  var peg$c20 = "<";
  var peg$c21 = "~";
  var peg$c22 = "(";
  var peg$c23 = ")";
  var peg$c24 = "AND";
  var peg$c25 = ".";
  var peg$c26 = "0";
  var peg$c27 = "\"";
  var peg$c28 = "'";
  var peg$c29 = "/";
  var peg$c30 = "-";
  var peg$c31 = "3";
  var peg$c32 = "1";
  var peg$c33 = "m";
  var peg$c34 = "h";
  var peg$c35 = "#";
  var peg$c36 = "--";

  var peg$r0 = /^[([]/;
  var peg$r1 = /^[)\]]/;
  var peg$r2 = /^[a-zA-Z0-9_]/;
  var peg$r3 = /^[^\r\n]/;
  var peg$r4 = /^[0-9]/;
  var peg$r5 = /^[1-9]/;
  var peg$r6 = /^[^"\r\n]/;
  var peg$r7 = /^[^'\r\n]/;
  var peg$r8 = /^[1-2]/;
  var peg$r9 = /^[0-1]/;
  var peg$r10 = /^[0-2]/;
  var peg$r11 = /^[ \t\r\n]/;

  var peg$e0 = peg$literalExpectation("O", true);
  var peg$e1 = peg$literalExpectation("R", true);
  var peg$e2 = peg$literalExpectation("D", true);
  var peg$e3 = peg$literalExpectation("E", true);
  var peg$e4 = peg$literalExpectation("B", true);
  var peg$e5 = peg$literalExpectation("Y", true);
  var peg$e6 = peg$literalExpectation(",", false);
  var peg$e7 = peg$literalExpectation("S", true);
  var peg$e8 = peg$literalExpectation("C", true);
  var peg$e9 = peg$literalExpectation("A", true);
  var peg$e10 = peg$literalExpectation("N", true);
  var peg$e11 = peg$literalExpectation("T", true);
  var peg$e12 = peg$literalExpectation("W", true);
  var peg$e13 = peg$literalExpectation("L", true);
  var peg$e14 = peg$literalExpectation("I", true);
  var peg$e15 = peg$literalExpectation("K", true);
  var peg$e16 = peg$literalExpectation("NOT", true);
  var peg$e17 = peg$literalExpectation("!", false);
  var peg$e18 = peg$literalExpectation("=", false);
  var peg$e19 = peg$literalExpectation(">", false);
  var peg$e20 = peg$literalExpectation("<", false);
  var peg$e21 = peg$literalExpectation("~", false);
  var peg$e22 = peg$classExpectation(["(", "["], false, false);
  var peg$e23 = peg$classExpectation([")", "]"], false, false);
  var peg$e24 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e25 = peg$literalExpectation("(", false);
  var peg$e26 = peg$literalExpectation(")", false);
  var peg$e27 = peg$literalExpectation("AND", false);
  var peg$e28 = peg$classExpectation(["\r", "\n"], true, false);
  var peg$e29 = peg$literalExpectation(".", false);
  var peg$e30 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e31 = peg$literalExpectation("0", false);
  var peg$e32 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e33 = peg$literalExpectation("\"", false);
  var peg$e34 = peg$literalExpectation("'", false);
  var peg$e35 = peg$classExpectation(["\"", "\r", "\n"], true, false);
  var peg$e36 = peg$classExpectation(["'", "\r", "\n"], true, false);
  var peg$e37 = peg$literalExpectation("/", false);
  var peg$e38 = peg$literalExpectation("-", false);
  var peg$e39 = peg$classExpectation([["1", "2"]], false, false);
  var peg$e40 = peg$literalExpectation("3", false);
  var peg$e41 = peg$classExpectation([["0", "1"]], false, false);
  var peg$e42 = peg$literalExpectation("1", false);
  var peg$e43 = peg$classExpectation([["0", "2"]], false, false);
  var peg$e44 = peg$literalExpectation("m", true);
  var peg$e45 = peg$literalExpectation("h", true);
  var peg$e46 = peg$literalExpectation("d", true);
  var peg$e47 = peg$literalExpectation("y", true);
  var peg$e48 = peg$anyExpectation();
  var peg$e49 = peg$literalExpectation("#", false);
  var peg$e50 = peg$literalExpectation("--", false);
  var peg$e51 = peg$otherExpectation("optional whitespace");
  var peg$e52 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false);
  var peg$e53 = peg$otherExpectation("required whitespace");

  var peg$f0 = function(expressions) {
    return flattenExpressions(expressions);
  };
  var peg$f1 = function(input) { return options.suggest(location(), input, ["ORDER BY"]); };
  var peg$f2 = function(input) { return options.suggest(location(), input, ["DESC"]); };
  var peg$f3 = function(input) { return options.suggest(location(), input, ["ASC"]); };
  var peg$f4 = function(input) { return options.suggest(location(), input, [" ASC", " DESC"]); };
  var peg$f5 = function(input) { return options.suggest(location(), input, ["OR", "ORDER BY"]); };
  var peg$f6 = function(input) { return options.suggest(location(), input, ["AND"]); };
  var peg$f7 = function(input) { return options.suggest(location(), input, ["OR"]); };
  var peg$f8 = function(input) { return options.suggest(location(), input, ["BETWEEN"]); };
  var peg$f9 = function(input) { return options.suggest(location(), input, ["LIKE"]); };
  var peg$f10 = function(input) { return options.suggest(location(), input, ["IN"]); };
  var peg$f11 = function(input) { return options.suggest(location(), input, ["NOT", "NOT LIKE", "NOT BETWEEN"]); };
  var peg$f12 = function(input) { return options.suggest(location(), input, ["NOT LIKE"]); };
  var peg$f13 = function(input) { return options.suggest(location(), input, ["NOT BETWEEN"]); };
  var peg$f14 = function(input) { return options.suggest(location(), input, ["NOT In"]); };
  var peg$f15 = function(input) {
    return options.suggest(location(), input, ["=", "!=", "<>", ">=", "<=", ">", "<", "~"]);
  };
  var peg$f16 = function(field, operator, parameter) {
      return options.suggestParameter(options, location(), field, operator, parameter)
  };
  var peg$f17 = function(field, operator, parameters) {
      return parameters.map(parameter => options.suggestParameter(options, location(), field, operator, parameter));
  };
  var peg$f18 = function(input) { return options.suggestField(options, location(), input); };
  var peg$f19 = function(input) { return options.suggestField(options, location(), input); };
  var peg$f20 = function() { return options.parameter(options, location(), 'date', text()); };
  var peg$f21 = function() { return options.parameter(options, location(), 'time', text()); };
  var peg$f22 = function() { return options.parameter(options, location(), 'number', text()); };
  var peg$f23 = function() { return options.parameter(options, location(), 'string', text()); };
  var peg$f24 = function() { return options.parameter(options, location(), 'function', text()); };
  var peg$f25 = function() { return options.parameter(options, location(), 'unknown', text()); };
  var peg$f26 = function(parameter, rest) {
    return [parameter].concat(rest);
  };
  var peg$f27 = function(parameter) {
    return [parameter];
  };
  var peg$f28 = function(char) { return char; };
  var peg$f29 = function() { return text(); };
  var peg$f30 = function() { return text(); };
  var peg$f31 = function() { return text(); };
  var peg$f32 = function() { return text(); };
  var peg$f33 = function(char) { return char.join(""); };
  var peg$f34 = function(char) { return char.join(""); };
  var peg$f35 = function() { return text(); };
  var peg$f36 = function() { return text(); };
  var peg$f37 = function() { return text(); };
  var peg$f38 = function(day, month, year) { return year + "-" + month + "-" + day };
  var peg$f39 = function(day, month, year) { return year + "-" + month + "-" + day };
  var peg$f40 = function(year, month, day) { return year + "-" + month + "-" + day };
  var peg$f41 = function(year, month, day) { return year + "-" + month + "-" + day };
  var peg$f42 = function(day) { return day.join("") };
  var peg$f43 = function(month) { return month.join("") };
  var peg$f44 = function(year) { return year.join("") };
  var peg$f45 = function() { return text() };
  var peg$f46 = function() { return null };
  var peg$f47 = function(input) { return options.suggest(location(), input, [], "comment") };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parse__();
    s4 = peg$parseComment();
    if (s4 === peg$FAILED) {
      s4 = peg$parseLogic();
      if (s4 === peg$FAILED) {
        s4 = peg$parseFallBack();
      }
    }
    if (s4 !== peg$FAILED) {
      s3 = [s3, s4];
      s2 = s3;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parse__();
      s4 = peg$parseComment();
      if (s4 === peg$FAILED) {
        s4 = peg$parseLogic();
        if (s4 === peg$FAILED) {
          s4 = peg$parseFallBack();
        }
      }
      if (s4 !== peg$FAILED) {
        s3 = [s3, s4];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s1 = peg$f0(s1);
    s0 = s1;

    return s0;
  }

  function peg$parseLogic() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseLogicExpression();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      s3 = peg$parseLogic();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s1 = [s1, s2, s3];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLogicExpression() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseTerm();
    if (s1 !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parse_();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseOr();
        if (s4 === peg$FAILED) {
          s4 = peg$parseAnd();
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s3 = [s3, s4, s5];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseOrOrder();
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = peg$currPos;
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseOrderBy();
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              s6 = peg$parseOrderByTerms();
              if (s6 === peg$FAILED) {
                s6 = null;
              }
              s3 = [s3, s4, s5, s6];
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
          if (s2 === peg$FAILED) {
            s2 = peg$currPos;
            s3 = peg$parse_();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseOr();
              if (s4 === peg$FAILED) {
                s4 = peg$parseAnd();
              }
              if (s4 === peg$FAILED) {
                s4 = null;
              }
              s3 = [s3, s4];
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          }
        }
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      s1 = [s1, s2];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFieldExpression() {
    var s0, s1, s2, s3, s4;

    s0 = peg$parseTerm();
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse__();
      s2 = peg$parseField();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        s4 = peg$parseOperator();
        if (s4 === peg$FAILED) {
          s4 = peg$parseComplexOperator();
        }
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        s1 = [s1, s2, s3, s4];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseOrderBy() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$currPos;
    if (input.substr(peg$currPos, 1).toLowerCase() === peg$c0) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 !== peg$FAILED) {
      if (input.substr(peg$currPos, 1).toLowerCase() === peg$c1) {
        s3 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      if (input.substr(peg$currPos, 1).toLowerCase() === peg$c2) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      if (input.substr(peg$currPos, 1).toLowerCase() === peg$c3) {
        s5 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s5 === peg$FAILED) {
        s5 = null;
      }
      if (input.substr(peg$currPos, 1).toLowerCase() === peg$c1) {
        s6 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s6 === peg$FAILED) {
        s6 = null;
      }
      s7 = peg$parse_();
      if (s7 === peg$FAILED) {
        s7 = null;
      }
      if (input.substr(peg$currPos, 1).toLowerCase() === peg$c4) {
        s8 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s8 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s8 === peg$FAILED) {
        s8 = null;
      }
      if (input.substr(peg$currPos, 1).toLowerCase() === peg$c5) {
        s9 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s9 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s9 === peg$FAILED) {
        s9 = null;
      }
      s2 = [s2, s3, s4, s5, s6, s7, s8, s9];
      s1 = s2;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseOrderByTerms() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseField();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      s3 = peg$parseOrder();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      if (input.charCodeAt(peg$currPos) === 44) {
        s4 = peg$c6;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      s5 = peg$parse__();
      s6 = peg$parseOrderByTerms();
      if (s6 === peg$FAILED) {
        s6 = null;
      }
      s1 = [s1, s2, s3, s4, s5, s6];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseOrder() {
    var s0, s1, s2, s3, s4, s5;
